--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
   "dependencies": {
     "@ant-design/icons": "^4.7.0",
     "antd": "^4.23.2",
+    "axios": "^0.27.2",
     "markdown-navbar": "^1.4.3",
     "next": "12.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-markdown": "^8.0.3"
+    "react-markdown": "^8.0.5"
   },
   "devDependencies": {
     "eslint": "8.24.0",
