--- a/package.json
+++ b/package.json
@@ -9,12 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@ant-design/icons": "^4.7.0",
-    "antd": "^4.23.2",
-    "axios": "^0.27.2",
+    "@ant-design/icons": "^4.8.0",
+    "antd": "^5.2.0",
+    "axios": "^1.3.2",
     "markdown-navbar": "^1.4.3",
-    "next": "12.3.1",
-    "react": "18.2.0",
+    "next": "^13.1.6",
+    "react": "^18.2.0",
     "react-dom": "18.2.0",
     "react-markdown": "^8.0.5"
   },
