--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@ant-design/icons": "^4.8.0",
     "antd": "^5.2.0",
     "axios": "^1.3.2",
+    "highlight.js": "^11.7.0",
     "markdown-navbar": "^1.4.3",
     "marked": "^4.2.12",
     "next": "^13.1.6",
