--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@ant-design/icons": "^4.8.0",
-    "antd": "^5.2.0",
+    "antd": "4.24.8",
     "axios": "^1.3.2",
     "highlight.js": "^11.7.0",
     "markdown-navbar": "^1.4.3",
